[package]
authors = ["Your Name"]
edition = "2018"
name = "rust-codespaces"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = "0.6.6"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
tokio = {version = "1.8", features = ["macros", "rt-multi-thread"]}
